syntax = "proto3";
package tendermint.spn.account;

import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
// this line is used by starport scaffolding # 1
import "account/coordinator_by_address.proto";
import "account/coordinator.proto";

option go_package = "github.com/tendermint/spn/x/account/types";

// Query defines the gRPC querier service.
service Query {
    // this line is used by starport scaffolding # 2

	// Queries a coordinatorByAddress by index.
	rpc CoordinatorByAddress(QueryGetCoordinatorByAddressRequest) returns (QueryGetCoordinatorByAddressResponse) {
		option (google.api.http).get = "/tendermint/spn/account/coordinatorByAddress/{address}";
	}

	// Queries a list of coordinatorByAddress items.
	rpc CoordinatorByAddressAll(QueryAllCoordinatorByAddressRequest) returns (QueryAllCoordinatorByAddressResponse) {
		option (google.api.http).get = "/tendermint/spn/account/coordinatorByAddress";
	}


	// Queries a coordinator by id.
	rpc Coordinator(QueryGetCoordinatorRequest) returns (QueryGetCoordinatorResponse) {
		option (google.api.http).get = "/tendermint/spn/account/coordinator/{id}";
	}

	// Queries a list of coordinator items.
	rpc CoordinatorAll(QueryAllCoordinatorRequest) returns (QueryAllCoordinatorResponse) {
		option (google.api.http).get = "/tendermint/spn/account/coordinator";
	}

}

// this line is used by starport scaffolding # 3
message QueryGetCoordinatorByAddressRequest {
	  string address = 1;

}

message QueryGetCoordinatorByAddressResponse {
	CoordinatorByAddress coordinatorByAddress = 1;
}

message QueryAllCoordinatorByAddressRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllCoordinatorByAddressResponse {
	repeated CoordinatorByAddress coordinatorByAddress = 1;
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}
message QueryGetCoordinatorRequest {
	uint64 id = 1;
}

message QueryGetCoordinatorResponse {
	Coordinator Coordinator = 1;
}

message QueryAllCoordinatorRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllCoordinatorResponse {
	repeated Coordinator Coordinator = 1;
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}
